UI correction mobile

--- a/pokedex/src/app/styles/_common.less
+++ b/pokedex/src/app/styles/_common.less
@@ -91,8 +91,8 @@ body {
 
 
 .col-md-4, .col-sm-6 {
-  padding-right: 50px !important ;
-  padding-left: 50px !important;
+  padding-right: 44px !important ;
+  padding-left: 44px !important;
 }
 
 
